Cambio de estilos y links rotos corregidos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -48,7 +48,7 @@
       <div class="overlay"></div>
       <div class="intro">
         <h1 class="animated fadeInUp">
-          <span style="color:#38a1d2">Andrea</span>
+          <span style="color:lightseagreen">Andrea</span>
         </h1>
         <h2 class="animated fadeInUp">front-end</h2>
       </div>
@@ -59,7 +59,7 @@
       <div class="overlayBis"></div>
       <div class="intro">
         <h1 class="animated fadeInUp left">
-          <span style="color:#FF4747">Tellería</span>
+          <span style="color:coral">Tellería</span>
         </h1>
         <h2 class="animated fadeInUp left">developer</h2>
       </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="row">
           <div class="col-md-5 introduction">
-            <h3 class="introTitle text-center" style="color:#FF4747">¿Quién soy?</h3>
+            <h3 class="introTitle text-center" style="color:coral">¿Quién soy?</h3>
             <p class="text-center">
               Me apasionan los idiomas y los lenguajes de programación (el idioma de la tecnología). Mi mundo se expande cuando aprendo
               a crear nuevas herramientas en la web, y de igual manera me gustaría que el resultado de mi trabajo pueda impactar
@@ -98,10 +98,9 @@
           </div>
           <div class="col-md-2 midimage">
             <img class="img-responsive hidden-sm" src="" alt="">
-            <div class="overlays"></div>
           </div>
           <div class="col-md-5 introduction">
-            <h3 class="introTitle text-center" style="color:#38a1d2">¿Qué hago?</h3>
+            <h3 class="introTitle text-center" style="color:lightseagreen">¿Qué hago?</h3>
             <p class="text-center">
               Desarrollo aplicaciones para páginas web utilizando las siguientes herramientas: HTML5, CSS3, Javascript, JQuery, Bootstrap,
               Materialize, Git & Github, Responsive Design, APIs, SPA.
@@ -133,51 +132,11 @@
             <div class="work-hover-title">
               <h3>Movie Kids</h3>
               <div class="link-inner">
-                <a href="#" target="_blank">
+                <a href="https://github.com/andreatelleria/reto-hackathon" target="_blank">
                   <div class="btn-hover"></div>
                 </a>
                 <!--Link al trabajo -->
                 <a href="#workModal1" class="my-work" data-toggle="modal">
-                  <div class="btn-more"></div>
-                </a>
-                <!--Link al modal-->
-              </div>
-            </div>
-          </div>
-          <img src="img/work/5small.jpg" class="img-responsive" alt="">
-        </div>
-        <!-- fin -->
-        <div class="col-lg-3 col-md-3 col-sm-6 work">
-          <div class="work-image"></div>
-          <div class="work-hover">
-            <div class="work-hover-title">
-              <h3>Lyft Lyfe</h3>
-              <div class="link-inner">
-                <a href="#" target="_blank">
-                  <div class="btn-hover"></div>
-                </a>
-                <!--Link al trabajo -->
-                <a href="#workModal2" class="my-work" data-toggle="modal">
-                  <div class="btn-more"></div>
-                </a>
-                <!--Link al modal-->
-              </div>
-            </div>
-          </div>
-          <img src="img/work/6small.jpg" class="img-responsive" alt="">
-        </div>
-        <!-- fin -->
-        <div class="col-lg-3 col-md-3 col-sm-6 work">
-          <div class="work-image"></div>
-          <div class="work-hover blue">
-            <div class="work-hover-title">
-              <h3>Labcar</h3>
-              <div class="link-inner">
-                <a href="#" target="_blank">
-                  <div class="btn-hover"></div>
-                </a>
-                <!-- Link al trabajo-->
-                <a href="#workModal3" class="my-work" data-toggle="modal">
                   <div class="btn-more"></div>
                 </a>
                 <!--Link al modal-->
@@ -191,9 +150,49 @@
           <div class="work-image"></div>
           <div class="work-hover blue">
             <div class="work-hover-title">
+              <h3>Lyft App</h3>
+              <div class="link-inner">
+                <a href="https://github.com/andreatelleria/lyft-app" target="_blank">
+                  <div class="btn-hover"></div>
+                </a>
+                <!--Link al trabajo -->
+                <a href="#workModal2" class="my-work" data-toggle="modal">
+                  <div class="btn-more"></div>
+                </a>
+                <!--Link al modal-->
+              </div>
+            </div>
+          </div>
+          <img src="img/work/2small.jpg" class="img-responsive" alt="">
+        </div>
+        <!-- fin -->
+        <div class="col-lg-3 col-md-3 col-sm-6 work">
+          <div class="work-image"></div>
+          <div class="work-hover">
+            <div class="work-hover-title">
+              <h3>Labcar</h3>
+              <div class="link-inner">
+                <a href="https://github.com/andreatelleria/lab-car-boilerplate" target="_blank">
+                  <div class="btn-hover"></div>
+                </a>
+                <!-- Link al trabajo-->
+                <a href="#workModal3" class="my-work" data-toggle="modal">
+                  <div class="btn-more"></div>
+                </a>
+                <!--Link al modal-->
+              </div>
+            </div>
+          </div>
+          <img src="img/work/3small.jpg" class="img-responsive" alt="">
+        </div>
+        <!-- fin -->
+        <div class="col-lg-3 col-md-3 col-sm-6 work">
+          <div class="work-image"></div>
+          <div class="work-hover blue">
+            <div class="work-hover-title">
               <h3>Twitter</h3>
               <div class="link-inner">
-                <a href="#" target="_blank">
+                <a href="https://github.com/andreatelleria/twitter" target="_blank">
                   <div class="btn-hover"></div>
                 </a>
                 <!-- Link al trabajo -->
@@ -204,7 +203,7 @@
               </div>
             </div>
           </div>
-          <img src="img/work/2small.jpg" class="img-responsive" alt="">
+          <img src="img/work/4small.jpg" class="img-responsive" alt="">
         </div>
         <!-- fin -->
       </div>
@@ -224,14 +223,17 @@
 
             <div class="col-lg-4 col-md-4 col-lg-offset-4 col-md-offset-4 col-sm-12 col-xs-12 text-center">
               <div class="social-icons">
-                <a href="#" title="Twitter" target="_blank">
-                  <div class="social-icon" id="twitter"></div>
-                </a>
-                <a href="#" title="Google+" target="_blank">
-                  <div class="social-icon" id="gp"></div>
-                </a>
                 <a href="https://www.linkedin.com/in/andrea-telleria/" title="LinkedIn" target="_blank">
                   <div class="social-icon" id="linkedin"></div>
+                </a>
+                <a href="https://www.facebook.com/andrea.yici" title="Facebook" target="_blank">
+                  <div class="social-icon" id="fb"></div>
+                </a>
+                <a href="https://github.com/andreatelleria" title="Github" target="_blank">
+                  <div class="social-icon" id="gp"></div>
+                </a>
+                <a href="mailto:andrea.telleria@gmail.com" title="E-mail" target="_blank">
+                  <div class="social-icon" id="mail"></div>
                 </a>
               </div>
             </div>
@@ -249,22 +251,23 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
-                    <img class="img-responsive center-block" src="img/work/5.jpg" alt="your project">
+                    <img class="img-responsive center-block" src="img/work/1.jpg" alt="your project">
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
                     <h2 class="red">Movie Kids</h2>
                     <p class="item-intro text-muted">Movie Kids te permite revisar información de películas con el objetivo de saber si son o no aptas para
-                      niños.</p>
+                      niños.
+                    </p>
                     <p>
                     </p>
                     <span class="btn-launch-red">
-                      <a href="#" title="Launch website" target="_blank">
-                        <i class="fa fa-share-square-o"></i>Ver Demo</a>
+                      <a href="https://andreatelleria.github.io/reto-hackathon/views/home.html" title="Launch website" target="_blank">
+                        <i class="fa fa-share-square-o"></i>&emsp;Ver Demo</a>
                     </span>
                     <span class="btn-close-red" data-dismiss="modal">
-                      <i class="fa fa-times"></i>Cerrar</span>
+                      <i class="fa fa-times"></i>&emsp;Cerrar</span>
                   </div>
                 </div>
               </div>
@@ -283,22 +286,22 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
-                    <img class="img-responsive center-block" src="img/work/6.jpg" alt="your project">
+                    <img class="img-responsive center-block" src="img/work/2.jpg" alt="your project">
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
-                    <h2 class="red">Lyft Lyfe</h2>
+                    <h2 class="blue">Lyft App</h2>
                     <p class="item-intro text-muted"></p>
                     <p>
                       App Lyft es una aplicación en donde se valida el número de celular, nombre y apellido, y correo de un nuevo usuario.
                     </p>
-                    <span class="btn-launch-red">
+                    <span class="btn-launch-blue">
                       <a href="#" title="Launch website" target="_blank">
-                        <i class="fa fa-share-square-o"></i>Ver Demo</a>
+                        <i class="fa fa-share-square-o"></i>&emsp;Ver Demo</a>
                     </span>
-                    <span class="btn-close-red" data-dismiss="modal">
-                      <i class="fa fa-times"></i> Cerrar</span>
+                    <span class="btn-close-blue" data-dismiss="modal">
+                      <i class="fa fa-times"></i>&emsp;Cerrar</span>
                   </div>
                 </div>
               </div>
@@ -317,24 +320,24 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
-                    <img class="img-responsive center-block" src="img/work/1.jpg" alt="your project">
+                    <img class="img-responsive center-block" src="img/work/3.jpg" alt="your project">
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
-                    <h2 class="blue">Labcar</h2>
+                    <h2 class="red">Labcar</h2>
                     <p class="item-intro text-muted">
                       Labcar es una aplicación cómoda y segura que te permitirá movilizarte por la ciudad de Lima.
                     </p>
                     <p>
                       <br/>
                     </p>
-                    <span class="btn-launch-blue">
-                      <a href="#" title="Launch website" target="_blank">
-                        <i class="fa fa-share-square-o"></i>Ver Demo</a>
+                    <span class="btn-launch-red">
+                      <a href="https://andreatelleria.github.io/lab-car-boilerplate/" title="Launch website" target="_blank">
+                        <i class="fa fa-share-square-o"></i>&emsp;Ver Demo</a>
                     </span>
-                    <span class="btn-close-blue" data-dismiss="modal">
-                      <i class="fa fa-times"></i>Cerrar</span>
+                    <span class="btn-close-red" data-dismiss="modal">
+                      <i class="fa fa-times"></i>&emsp;Cerrar</span>
                   </div>
                 </div>
               </div>
@@ -353,21 +356,21 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
-                    <img class="img-responsive center-block" src="img/work/2.jpg" alt="your project">
+                    <img class="img-responsive center-block" src="img/work/4.jpg" alt="your project">
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="modal-body">
                     <h2 class="blue">Twitter</h2>
                     <p class="item-intro text-muted">
-                      witter es una aplicación que te permite publicar posts con un máximo de 140 caracteres y con la hora de la publicación.
+                      Esta réplica de Twitter te permite publicar posts con un máximo de 140 caracteres y con la hora de la publicación.
                     </p>
                     <span class="btn-launch-blue">
-                      <a href="#" title="Launch website" target="_blank">
-                        <i class="fa fa-share-square-o"></i>Ver Demo</a>
+                      <a href="https://andreatelleria.github.io/twitter/" title="Launch website" target="_blank">
+                        <i class="fa fa-share-square-o"></i>&emsp;Ver Demo</a>
                     </span>
                     <span class="btn-close-blue" data-dismiss="modal">
-                      <i class="fa fa-times"></i>Cerrar</span>
+                      <i class="fa fa-times"></i>&emsp;Cerrar</span>
                   </div>
                 </div>
               </div>
@@ -386,10 +389,12 @@
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <!-- Bootstrap & JS -->
+  <!-- Bootstrap -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <!-- Smooth Scroll -->
   <script type='text/javascript' src="js/SmoothScroll.js"></script>
+  <!-- JS -->
   <script src="js/app.js"></script>
 
 </body>
