Cambiando tamaño de imágenes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <a href="https://www.linkedin.com/in/andrea-telleria/" title="LinkedIn" target="_blank">
                   <div class="social-icon" id="linkedin"></div>
                 </a>
-                <a href="https://www.facebook.com/andrea.yici" title="Facebook" target="_blank">
+                <a href="https://drive.google.com/file/d/1wMC3XHfzplCmkQnf1QqnIxPDHVPbss-v/view" title="CV" target="_blank">
                   <div class="social-icon" id="fb"></div>
                 </a>
                 <a href="https://github.com/andreatelleria" title="Github" target="_blank">
@@ -297,7 +297,7 @@
                       App Lyft es una aplicación en donde se valida el número de celular, nombre y apellido, y correo de un nuevo usuario.
                     </p>
                     <span class="btn-launch-blue">
-                      <a href="#" title="Launch website" target="_blank">
+                      <a href="https://andreatelleria.github.io/lyft-app/" title="Launch website" target="_blank">
                         <i class="fa fa-share-square-o"></i>&emsp;Ver Demo</a>
                     </span>
                     <span class="btn-close-blue" data-dismiss="modal">
